include/output/openswmm_output.h


#define MAXFILENAME 259
#define MAXELENAME 31
typedef void *SMO_Handle;
int EXPORT_SWMM_OUTPUT_API SMO_init(SMO_Handle *p_handle);
int EXPORT_SWMM_OUTPUT_API SMO_close(SMO_Handle *p_handle);
int EXPORT_SWMM_OUTPUT_API SMO_open(SMO_Handle p_handle, const char *path);
int EXPORT_SWMM_OUTPUT_API SMO_getVersion(SMO_Handle p_handle, int *version);
int EXPORT_SWMM_OUTPUT_API SMO_getProjectSize(SMO_Handle p_handle, int **elementCount, int *length);
int EXPORT_SWMM_OUTPUT_API SMO_getUnits(SMO_Handle p_handle, int **unitFlag, int *length);
int EXPORT_SWMM_OUTPUT_API SMO_getFlowUnits(SMO_Handle p_handle, int *unitFlag);
int EXPORT_SWMM_OUTPUT_API SMO_getPollutantUnits(SMO_Handle p_handle, int **unitFlag, int *length);
int EXPORT_SWMM_OUTPUT_API SMO_getStartDate(SMO_Handle p_handle, double *date);
int EXPORT_SWMM_OUTPUT_API SMO_getTimes(SMO_Handle p_handle, SMO_time code, int *time);
int EXPORT_SWMM_OUTPUT_API SMO_getElementName(
    SMO_Handle p_handle, 
    SMO_elementType type, 
    int elementIndex, 
    char **elementName, 
    int *size
);
int EXPORT_SWMM_OUTPUT_API SMO_getNumVars(
    SMO_Handle p_handle,
    SMO_elementType type, 
    int *count
);
int EXPORT_SWMM_OUTPUT_API SMO_getVarCode(SMO_Handle p_handle, SMO_elementType type, int varIndex, int *varCode);
int EXPORT_SWMM_OUTPUT_API SMO_getVarCodes(SMO_Handle p_handle, SMO_elementType type, int **varCodes, int *size);
int EXPORT_SWMM_OUTPUT_API SMO_getNumProperties(SMO_Handle p_handle, SMO_elementType type, int *count);
int EXPORT_SWMM_OUTPUT_API SMO_getPropertyCode(SMO_Handle p_handle, SMO_elementType type, int propertyIndex, int *propertyCode);
int EXPORT_SWMM_OUTPUT_API SMO_getPropertyCodes(SMO_Handle p_handle, SMO_elementType type, int **propertyCodes, int *size);
int EXPORT_SWMM_OUTPUT_API SMO_getPropertyValue(
    SMO_Handle p_handle, 
    SMO_elementType type, 
    int propertyIndex, 
    int elementIndex, 
    float *value
);
int EXPORT_SWMM_OUTPUT_API SMO_getPropertyValues(
    SMO_Handle p_handle, 
    SMO_elementType type, 
    int elementIndex, 
    float **outValueArray, 
    int *length
);
int EXPORT_SWMM_OUTPUT_API SMO_getSubcatchSeries(
    SMO_Handle p_handle, 
    int subcatchIndex, 
    SMO_subcatchAttribute attr, 
    int startPeriod, 
    int endPeriod, 
    float **outValueArray,
    int *length
);
int EXPORT_SWMM_OUTPUT_API SMO_getNodeSeries(
    SMO_Handle p_handle, 
    int nodeIndex, 
    SMO_nodeAttribute attr, 
    int startPeriod, 
    int endPeriod, 
    float **outValueArray, 
    int *length
);