include/output/openswmm_output_enums.h


typedef enum {
     SMO_US,
     SMO_SI
} SMO_unitSystem;
typedef enum {
     SMO_CFS,
     SMO_GPM,
     SMO_MGD,
     SMO_CMS,
     SMO_LPS,
     SMO_MLD
} SMO_flowUnits;
typedef enum {
    SMO_MG,
    SMO_UG,
    SMO_COUNT,
    SMO_NONE
} SMO_concUnits;
typedef enum {
    SMO_subcatch,
    SMO_node,
    SMO_link,
    SMO_sys,
    SMO_pollut
} SMO_elementType;
typedef enum {
    SMO_reportStep,
    SMO_numPeriods
} SMO_time;
typedef enum {
    SMO_rainfall_subcatch,
    SMO_snow_depth_subcatch,
    SMO_evap_loss,
    SMO_infil_loss,
    SMO_runoff_rate,
    SMO_gwoutflow_rate,
    SMO_gwtable_elev,
    SMO_soil_moisture,
    SMO_pollutant_conc_subcatch	
} SMO_subcatchAttribute;
typedef enum {
    SMO_invert_depth,
    SMO_hydraulic_head,
    SMO_stored_ponded_volume,
    SMO_lateral_inflow,
    SMO_total_inflow,
    SMO_flooding_losses,
    SMO_pollutant_conc_node,
} SMO_nodeAttribute;
typedef enum {
    SMO_flow_rate_link,
    SMO_flow_depth,
    SMO_flow_velocity,
    SMO_flow_volume,
    SMO_capacity,
    SMO_pollutant_conc_link
} SMO_linkAttribute;
typedef enum {
    SMO_air_temp,
    SMO_rainfall_system,
    SMO_snow_depth_system,
    SMO_evap_infil_loss,
    SMO_runoff_flow,
    SMO_dry_weather_inflow,
    SMO_groundwater_inflow,
    SMO_RDII_inflow,
    SMO_direct_inflow,
    SMO_total_lateral_inflow,
    SMO_flood_losses,
    SMO_outfall_flows,
    SMO_volume_stored,
    SMO_evap_rate
} SMO_systemAttribute;